# PartialKey

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: app.h
app/src/: CMakeLists.txt  app.cpp
lib/: CmakeLists.txt
lib/include/: Adler16 .h  Base32.h  Crc16.h  Crc32.h  CrcCcitt .h  Fnv1A.h  GeneralizedCrc.h  IChecksum16.h  IChecksum32.h  IHash.h  Jenkins06.h  Jenkins96.h  OneAtATime.h  PartialKey.h  SuperFast.h  VS3Architecture.h  VS3Common.h  VS3Stddef.h
lib/src/: Base32.cpp  CMakeLists.txt  PartialKey.cpp  VS3Common.cpp
lib/src/Checksum/: Adler16.cpp  CMakeLists.txt  Crc16.cpp  CrcCcitt.cpp
lib/src/Hash/: CMakeLists.txt  Crc32.cpp  Fnv1A.cpp  GeneralizedCrc.cpp  Jenkins06.cpp  Jenkins96.cpp  OneAtATime.cpp  SuperFast.cpp
